package br.agrotoxico.model;

public enum TipoFormulacao {
    SOLUCAO,
    SUSPENSAO,
    EMULSAO,
    GRANULADO
}
